@@ -1,3 +1,4 @@
+* Add cumulate option for Debit/Credit on Account
 * Allow to open accounts from balance sheet
 * Add start/end balance to Trial balance
 
